Remove deprecated -XX:PermSize JVM option
The command line option `-XX:PermSize` has been removed in Java 8 and
is now ignored. Remove it from server launch scripts to avoid a JVM
warning.

Issue-Id: #3216